Data type example added & some program modified